AEROGEAR-2541 Security check screen

--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -126,6 +126,9 @@
   <data name="NavHttp" xml:space="preserve">
     <value>HTTP</value>
   </data>
+  <data name="NavSecurity" xml:space="preserve">
+    <value>Security</value>
+  </data>
   <data name="NavAuth" xml:space="preserve">
     <value>Auth</value>
   </data>
