App name and title fixes, icon appearance modification

--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppName" xml:space="preserve">
-    <value>AeroGear Xamarin Example</value>
+    <value>AeroGear Xamarin Showcase</value>
   </data>
   <data name="NavHome" xml:space="preserve">
     <value>Home</value>
