Changed page title Re-enabled dynamic page title

--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -127,7 +127,7 @@
     <value>Security</value>
   </data>
   <data name="NavAuth" xml:space="preserve">
-    <value>Auth</value>
+    <value>Authentication</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Home!!!</value>
