--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -189,58 +189,92 @@ If you would like to get involved in this work, please check out our community c
   <data name="UnderConstructionTitle" xml:space="preserve">
     <value>Under Construction</value>
   </data>
-
-  <!--  Documentation links-->
   <data name="idm.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/keycloak/index.html</value>
   </data>
-
   <data name="idm.sso.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/keycloak/index.html?sso=1</value>
   </data>
-
   <data name="device.security.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/security/index.html</value>
   </data>
-
   <data name="push.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/push/index.html</value>
   </data>
-
   <data name="metrics.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/metrics/index.html</value>
   </data>
-    
-  <!--  Auth Resources-->
   <data name="auth.Login" xml:space="preserve">
     <value>Authenticate</value>
   </data>
-
   <data name="auth.Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
-    
   <data name="auth.userDetails.FullName" xml:space="preserve">
     <value>Full Name</value>
   </data>
-
   <data name="auth.userDetails.Username" xml:space="preserve">
     <value>Username</value>
   </data>
-
   <data name="auth.userDetails.Email" xml:space="preserve">
     <value>Email</value>
   </data>
-
   <data name="auth.userDetails.AssignedRoles" xml:space="preserve">
     <value>Assigned Roles</value>
   </data>
-
   <data name="auth.userDetails.Otp2FAEnabled" xml:space="preserve">
     <value>OTP 2FA Enabled</value>
   </data>
-
   <data name="auth.userDetails.EmailVerified" xml:space="preserve">
     <value>Email Verified</value>
+  </data>
+  <data name="DeviceSecurity" xml:space="preserve">
+    <value>Device Security</value>
+  </data>
+  <data name="DeviceSecurityDesc" xml:space="preserve">
+    <value>The Device Security service allows you to easily configure and manage device security, and trust checks for your mobile app.
+&lt;br/&gt;&lt;br/&gt;
+&lt;ul&gt;
+&lt;li&gt;Perform a range of device trust checks on the mobile device, such as checking if the device is rooted, and allows you take proactive action based on the results&lt;/li&gt;
+&lt;li&gt;Distribute SSL certificates with a mobile app to create a direct chain of trust (certificate pinning)&lt;/li&gt;
+&lt;/ul&gt;</value>
+  </data>
+  <data name="IdtManagementDesc" xml:space="preserve">
+    <value>The Identity Management service allows you to add authentication and authorization to your mobile app.
+&lt;br/&gt;&lt;br/&gt;
+&lt;ul&gt;
+&lt;li&gt;Secure your mobile app using the industry standard OpenID Connect protocol&lt;/li&gt;
+&lt;li&gt;Add access control to your app based on user’s group membership&lt;/li&gt;
+&lt;li&gt;Easily implement SSO, multi factor authentication and Social Login support&lt;/li&gt;
+&lt;li&gt;Back end support for identity brokering and user federation&lt;/li&gt;
+&lt;/ul&gt;</value>
+  </data>
+  <data name="IdtMangement" xml:space="preserve">
+    <value>Identity Management</value>
+  </data>
+  <data name="MobileMetrics" xml:space="preserve">
+    <value>Mobile Metrics</value>
+  </data>
+  <data name="MobileMetricsDesc" xml:space="preserve">
+    <value>The Mobile Metrics service allows you gather metrics on mobile apps, device versions, device security checks and back-end mobile service usage.
+&lt;br/&gt;&lt;br/&gt;
+&lt;ul&gt;
+&lt;li&gt;Monitor usage by version of mobile app, platform and SDK&lt;/li&gt;
+&lt;li&gt;Monitor interactions with the Identity Management service&lt;/li&gt;
+&lt;/ul&gt;</value>
+  </data>
+  <data name="PushNotifications" xml:space="preserve">
+    <value>Push Notifications</value>
+  </data>
+  <data name="PushNotificationsDesc" xml:space="preserve">
+    <value>The Push Notifications service allows you send native push notifications to different mobile operating systems.
+&lt;br/&gt;&lt;br/&gt;
+&lt;ul&gt;
+&lt;li&gt;Code once and send push notifications to iOS and Android&lt;/li&gt;
+&lt;li&gt;Push notifications to defined groups&lt;/li&gt;
+&lt;li&gt;Push notifications to either iOS only or Android only&lt;/li&gt;
+&lt;li&gt;Push notifications to different variants of a mobile app&lt;/li&gt;
+&lt;li&gt;Push notifications from different back-end apps to the same mobile app&lt;/li&gt;
+&lt;/ul&gt;</value>
   </data>
 </root>
