--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-    <!-- 
+  <!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -194,90 +194,67 @@ If you would like to get involved in this work, please check out our community c
   <data name="UnderConstructionTitle" xml:space="preserve">
     <value>Under Construction</value>
   </data>
-
   <data name="button.close.caption" xml:space="preserve">
     <value>Close</value>
   </data>
-
   <data name="button.showdocs.caption" xml:space="preserve">
     <value>Show Documentation</value>
   </data>
-
   <data name="dialog.error.title" xml:space="preserve">
     <value>Error</value>
   </data>
-
-
   <data name="dialog.notconfigured.title" xml:space="preserve">
     <value>Feature Not Configured</value>
   </data>
-
   <data name="dialog.notconfigured.message" xml:space="preserve">
     <value>The service {0} does not have a configuration in mobile-services.json. Refer to the documentation for instructions on how to configure this service.</value>
   </data>
-
   <data name="service.auth.name" xml:space="preserve">
     <value>identity management</value>
   </data>
-
   <data name="service.auth.authentication.failed" xml:space="preserve">
     <value>Authentication Failed</value>
   </data>
-    
-  <!--  Documentation links-->
   <data name="idm.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/keycloak/index.html</value>
   </data>
-
   <data name="idm.sso.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/keycloak/index.html?sso=1</value>
   </data>
-
   <data name="device.security.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/security/index.html</value>
   </data>
-
   <data name="push.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/push/index.html</value>
   </data>
-
   <data name="metrics.doc.link" xml:space="preserve">
     <value>https://docs.aerogear.org/aerogear/latest/metrics/index.html</value>
   </data>
-    
-  <!--  Auth Resources-->
   <data name="auth.Login" xml:space="preserve">
     <value>Authenticate</value>
   </data>
-
   <data name="auth.Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
-    
   <data name="auth.userDetails.FullName" xml:space="preserve">
     <value>Full Name</value>
   </data>
-
   <data name="auth.userDetails.Username" xml:space="preserve">
     <value>Username</value>
   </data>
-
   <data name="auth.userDetails.Email" xml:space="preserve">
     <value>Email</value>
   </data>
-
   <data name="auth.userDetails.AssignedRoles" xml:space="preserve">
     <value>Assigned Roles</value>
   </data>
-
   <data name="auth.userDetails.Otp2FAEnabled" xml:space="preserve">
     <value>OTP 2FA Enabled</value>
   </data>
-
   <data name="auth.userDetails.EmailVerified" xml:space="preserve">
     <value>Email Verified</value>
   </data>
-    <data name="DeviceSecurityDesc" xml:space="preserve">
+  <data name="DeviceSecurityDesc" xml:space="preserve">
     <value>The Device Security service allows you to easily configure and manage device security, and trust checks for your mobile app.
 &lt;br/&gt;&lt;br/&gt;
 &lt;ul&gt;
@@ -286,7 +263,7 @@ If you would like to get involved in this work, please check out our community c
 &lt;/ul&gt;
 &lt;br&gt;</value>
   </data>
-    <data name="IdtManagementDesc" xml:space="preserve">
+  <data name="IdtManagementDesc" xml:space="preserve">
     <value>The Identity Management service allows you to add authentication and authorization to your mobile app.
 &lt;br/&gt;&lt;br/&gt;
 &lt;ul&gt;
@@ -297,7 +274,7 @@ If you would like to get involved in this work, please check out our community c
 &lt;/ul&gt;
 &lt;br&gt;</value>
   </data>
-    <data name="MobileMetricsDesc" xml:space="preserve">
+  <data name="MobileMetricsDesc" xml:space="preserve">
     <value>The Mobile Metrics service allows you gather metrics on mobile apps, device versions, device security checks and back-end mobile service usage.
 &lt;br/&gt;&lt;br/&gt;
 &lt;ul&gt;
@@ -306,7 +283,7 @@ If you would like to get involved in this work, please check out our community c
 &lt;/ul&gt;
 &lt;br&gt;</value>
   </data>
-    <data name="PushNotificationsDesc" xml:space="preserve">
+  <data name="PushNotificationsDesc" xml:space="preserve">
     <value>The Push Notifications service allows you send native push notifications to different mobile operating systems.
 &lt;br/&gt;&lt;br/&gt;
 &lt;ul&gt;
@@ -318,5 +295,8 @@ If you would like to get involved in this work, please check out our community c
 &lt;/ul&gt;
 &lt;br&gt;            
 </value>
+  </data>
+  <data name="NavSubheader" xml:space="preserve">
+    <value>aerogear.org</value>
   </data>
 </root>
