--- a/Example/Resources/StringResources.resx
+++ b/Example/Resources/StringResources.resx
@@ -146,7 +146,7 @@
     <value>AeroGear</value>
   </data>
   <data name="NavCertPinning" xml:space="preserve">
-    <value>Cert. Pinning</value>
+    <value>Cert Pinning</value>
   </data>
   <data name="NavDeviceProfileInfo" xml:space="preserve">
     <value>Device Profile Info</value>
@@ -185,7 +185,7 @@
     <value>&lt;center&gt;This feature is currently under construction for this platform.
 &lt;br&gt;&lt;br&gt;
 If you would like to get involved in this work, please check out our community contribution page.&lt;br&gt;&lt;span style="color: #2e6980"&gt;
- &lt;a href="http://www.aerogear.org/community#guides"&gt;www.aerogear.org/community#guides&lt;/a&gt;&lt;/span&gt;&lt;/center&gt;
+ &lt;br&gt;&lt;a href="http://www.aerogear.org/community#guides"&gt;www.aerogear.org/community#guides&lt;/a&gt;&lt;/span&gt;&lt;/center&gt;
     </value>
   </data>
   <data name="NavSSO" xml:space="preserve">
